--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "deepai": "^1.0.21",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
